Add login and register route, change swagger code, add bcrypt
