# app/controllers/mongodbControllers/users.js
@@ -1,6 +1,7 @@
-const mySQL = require("../../models").mysqlDB;
-const User = mySQL.users;
-const Op = mySQL.Sequelize.Op;
+const { mongoDB } = require("../../models");
+const MongoUser = mongoDB.users;
+
+const bcrypt = require("bcryptjs");
 
 const create = async (req, res) => {
   // Data validation
@@ -13,14 +14,15 @@ const create = async (req, res) => {
 
   try {
     // Create new user
-    const user = {
-      fullName: req.body.name,
-      city: req.body.city,
+    const user = new MongoUser({
+      username: req.body.username,
+      password: bcrypt.hashSync(req.body.password),
+      name: req.body.name,
       age: req.body.age ? req.body.age : null,
-    };
+    });
 
     // Save new user in database
-    await User.create(user);
+    await user.save();
 
     res.status(201).send({
       success: true,
@@ -43,7 +45,7 @@ const findAll = async (req, res) => {
 
   try {
     // Received user list
-    let usersList = await User.findAll({ where: condition });
+    let usersList = await MongoUser.find(condition);
     // Send data
     res.status(202).send({
       success: true,
@@ -63,7 +65,7 @@ const findOne = async (req, res) => {
 
   try {
     // Received user data
-    let user = await User.findByPk(id);
+    let user = await MongoUser.findById(id);
     // Send data
     res.status(202).send({
       success: true,
@@ -82,9 +84,18 @@ const update = async (req, res) => {
   const id = req.params.id;
   try {
     // Received user data
-    let user = await User.update(req.body, {
-      where: { id: id },
-    });
+    let user = await MongoUser.findByIdAndUpdate(
+      id,
+      {
+        username: req.body.username,
+        password: bcrypt.hashSync(req.body.password),
+        name: req.body.name,
+        age: req.body.age ? req.body.age : null,
+      },
+      {
+        useFindAndModify: false,
+      }
+    );
     // Send data
     res.status(200).send({
       success: true,
@@ -104,9 +115,7 @@ const deleteUser = async (req, res) => {
 
   try {
     // Delete user with this ID
-    await User.destroy({
-      where: { id: id },
-    });
+    await MongoUser.findByIdAndRemove(id);
 
     // Send data
     res.status(200).send({
@@ -124,15 +133,11 @@ const deleteUser = async (req, res) => {
 const deleteAll = async (req, res) => {
   try {
     // Delete all user
-    let num = await User.destroy({
-      where: {},
-      truncate: false,
-    });
+    await MongoUser.deleteMany({});
 
     // Send data
     res.status(200).send({
       success: true,
-      num,
       message: `${data.deletedCount} User were deleted successfully!`,
     });
   } catch (error) {
