# app/router/mysqlRouter/users.js
@@ -1,0 +1,30 @@
+// Controllers
+const { mysqlUsersController } = require("../../controllers");
+
+// Auth middleware
+const authChecker = require("../../middlewares/authChecker");
+
+// Express Router
+const router = require("express").Router();
+
+router.use(authChecker);
+
+// Create new user
+router.post("/create", mysqlUsersController.create);
+
+// Find all users
+router.get("/find_all", mysqlUsersController.findAll);
+
+// Find one user by ID
+router.get("/find/:id", mysqlUsersController.findOne);
+
+// Update user information
+router.put("/update/:id", mysqlUsersController.update);
+
+// Delete a user
+router.delete("/delete/:id", mysqlUsersController.deleteUser);
+
+// Delete all users
+router.delete("/delete_all", mysqlUsersController.deleteAll);
+
+module.exports = router;
